<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCardActivity">


    <Button
        android:id="@+id/cancelButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/ic_cancelbutton"
        android:elevation="0dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="399dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/cancelButton"
        android:layout_marginStart="43dp"
        android:background="@drawable/ic_savebutton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="399dp" />


    <EditText
        android:id="@+id/editQuestion"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/colorPurpleBackground"
        android:fontFamily="@font/inknut_antiqua"
        android:hint="@string/editQuestion"
        android:inputType="text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCorrect"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="144dp"
        android:backgroundTint="@color/colorPurpleBackground"
        android:fontFamily="@font/inknut_antiqua_light"
        android:hint="@string/editCorrect"
        android:inputType="text"
        android:textSize="16sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editWrong1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editCorrect"
        android:backgroundTint="@color/colorPurpleBackground"
        android:fontFamily="@font/inknut_antiqua_light"
        android:hint="@string/editWrong1"
        android:inputType="text"
        android:textSize="16sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editWrong2"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="157dp"
        android:backgroundTint="@color/colorPurpleBackground"
        android:fontFamily="@font/inknut_antiqua_light"
        android:hint="@string/editWrong2"
        android:inputType="text"
        android:textSize="16sp"
        android:textStyle="italic" />




</RelativeLayout>