<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/flashcard_question"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/card_background"
        android:elevation="13dp"
        android:fontFamily="@font/glegoo_bold"
        android:gravity="center"
        android:text="@string/mainQuestion"
        android:textColor="@color/colorPurple2"
        android:textSize="36.5sp"
        android:textStyle="bold" />

   <TextView
       android:id="@+id/flashcard_answer"
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
       android:background="@drawable/card_background2"
       android:fontFamily="@font/glegoo_bold"
       android:gravity="center"
       android:text="@string/mainAnswer"
       android:textSize="35sp"
       android:visibility="invisible" />

    <ImageView
        android:id="@+id/toggle_choices_visibility"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/toggle_choices_invisibility"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_eye1" />

   <ImageView
       android:id="@+id/toggle_choices_invisibility"
       android:layout_width="35dp"
       android:layout_height="35dp"
       android:layout_alignTop="@+id/addButton"
       android:layout_centerHorizontal="true"
       android:src="@drawable/ic_eye2" />


   <TextView
       android:id="@+id/answer1"
       android:layout_width="385dp"
       android:layout_height="35dp"
       android:layout_alignParentBottom="true"
       android:layout_alignParentStart="true"
       android:layout_marginBottom="193dp"
       android:background="@color/colorPurpleBackground"
       android:fontFamily="@font/delius_swash_caps"
       android:text="@string/mainWrong1"
       android:textAlignment="center"
       android:textColor="@color/colorPurple2"
       android:textSize="26sp"
       android:textStyle="bold" />

   <TextView
       android:id="@+id/answer2"
       android:layout_width="385dp"
       android:layout_height="35dp"
       android:layout_alignParentBottom="true"
       android:layout_alignParentStart="true"
       android:layout_marginBottom="144dp"
       android:background="@color/colorPurpleBackground"
       android:fontFamily="@font/delius_swash_caps"
       android:text="@string/mainWrong2"
       android:textAlignment="center"
       android:textColor="@color/colorPurple2"
       android:textSize="26sp"
       android:textStyle="bold" />

   <TextView
       android:id="@+id/answer3"
       android:layout_width="385dp"
       android:layout_height="35dp"
       android:layout_alignParentBottom="true"
       android:layout_alignParentStart="true"
       android:layout_marginBottom="94dp"
       android:background="@color/colorPurpleBackground"
       android:fontFamily="@font/delius_swash_caps"

       android:text="@string/mainAnswer"
       android:textAlignment="center"
       android:textAllCaps="false"
       android:textColor="@color/colorPurple2"
       android:textSize="26sp"
       android:textStyle="bold" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ic_addbutton"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="429dp" />


    <Button
        android:id="@+id/editButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/addButton"
        android:layout_marginStart="27dp"
        android:background="@drawable/ic_editbutton"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="429dp" />

   <Button
       android:id="@+id/nextButton"
       android:layout_width="40dp"
       android:layout_height="40dp"
       android:layout_alignParentTop="true"
       android:layout_alignStart="@+id/addButton"
       android:layout_marginTop="223dp"
       android:background="@drawable/ic_nextbutton"
       tools:layout_editor_absoluteX="280dp"
       tools:layout_editor_absoluteY="429dp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_alignStart="@+id/editButton"
        android:layout_alignTop="@+id/nextButton"
        android:background="@drawable/ic_deletebutton"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="429dp" />




</RelativeLayout>